syntax = "proto3";

package api;
option go_package = "github.com/onepanelio/core/api/gen";

import "google/api/annotations.proto";

service NamespaceService {
    rpc ListNamespaces(ListNamespacesRequest) returns (ListNamespacesResponse) {
        option (google.api.http) = {
            get: "/apis/v1beta1/namespaces"
        };
    }

    rpc CreateNamespace(CreateNamespaceRequest) returns (Namespace) {
        option (google.api.http) = {
            post: "/apis/v1beta1/namespaces"
            body: "namespace"
        };
    }
}

message ListNamespacesRequest {
    int32 pageSize = 1;
    int32 page = 2;
    string query = 3;
}

message ListNamespacesResponse {
    int32 count = 1;
    repeated Namespace namespaces = 2;
    int32 page = 3;
    int32 pages = 4;
    int32 totalCount = 5;
}

message CreateNamespaceRequest {
    Namespace namespace = 1;
}

message Namespace {
    string name = 1;
    string sourceName = 2;
}